# linear_regression_model

./: .gitignore  README.md  pyproject.toml  render_bash.sh  source.docx
summative/: .gitignore  pyproject.toml  requirements.txt
summative/api/: main.py  prediction.py  router.py  routing.py  schemas.py
summative/api/middlewares/: cors_middleware.py
summative/api/routers/: prediction_router.py  retrain_router.py  router.py
summative/api/runner/: init_model.py
summative/api/schemas/: retrain_model_schemas.py
summative/api/services/: prediction.py  retrain_model.py
summative/linear_regression/: malaria_control_africa.csv  malaria_control_africa_test_data.csv  malaria_control_africa_train_data.csv  multivariate.ipynb  multivariate_random_split.ipynb  scaler.pkl  scripts.py  who_malaria_incidence_raw.csv  worldbank_indicators_raw.csv
summative/linear_regression/crop_yield_food_security/: crop_yield_africa.csv
summative/linear_regression/digital_access/: digital_access_africa.csv
summative/linear_regression/energy_load_shedding/: energy_access_africa.csv
summative/linear_regression/hiv_aids_response/: hiv_aids_africa.csv
summative/linear_regression/malaria_control/: malaria_control_africa.csv
summative/linear_regression/soil_fertility_agriculture/: HOW_TO_DOWNLOAD.md
summative/linear_regression/urban_logistics_nairobi/: HOW_TO_DOWNLOAD.md
summative/linear_regression/water_access/: water_access_africa.csv
summative/predictionmodel/: README.md  pubspec.yaml
summative/predictionmodel/linux/: CMakeLists.txt
(+15 files in other folders)
