[project]
name = "linear-regression-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "scikit-learn==1.6.1",
    "statsmodels==0.14.4",
    "joblib==1.4.2",
    "pydantic[standard]",
    "fastapi",
    "uvicorn",
    "requests>=2.34.2",
]
